--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-codemirror": "^4.23.6",
     "bcrypt": "^5.1.1",
+    "child_process": "^1.0.2",
+    "codemirror": "^5.65.18",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express-formidable": "^1.2.0",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.73.0",
+    "python-shell": "^5.0.0",
     "react": "^18.3.1",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
