--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@jupyterlab/services": "^7.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-codemirror": "^4.23.6",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "child_process": "^1.0.2",
     "codemirror": "^5.65.18",
@@ -21,7 +23,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.73.0",
+    "openai": "^3.2.1",
     "python-shell": "^5.0.0",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.0",
